# OpenGL_Sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  OpenGL_Render.cpp  OpenGL_Render.h  README.md  conanfile.py  install.bat
Render/: CMakeLists.txt
Render/include/Render/: Camera.h  Color.h  FrameBuffer.h  IndexBuffer.h  InputManager.h  Logger.h  Render.h  RenderBuffer.h  Renderer.h  Shader.h  Texture.h  Transform.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Window.h
Render/src/: Camera.cpp  Color.cpp  FrameBuffer.cpp  IndexBuffer.cpp  InputManager.cpp  Logger.cpp  Render.cpp  RenderBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Transform.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
Sandbox/: CMakeLists.txt  main.cpp
Sandbox/assets/models/link/: pose.mtl
Sandbox/assets/models/sponza/: sponza.mtl
Sandbox/assets/models/wall/: wall_hole.mtl
Sandbox/assets/shaders/: circle.frag  default.frag  default.glsl  default.vs  multi_light.frag  multi_light.glsl  multi_light.vs  multi_light1.frag  mvp.vs  mvp_light.frag  mvp_light.glsl  mvp_light.vs  mvp_light2.frag  mvp_light2.glsl  mvp_plain.frag  mvp_plain.glsl  mvp_plain.vs  outline.frag  outline.glsl  plain.vs  postprocess.frag  postprocess.glsl  postprocess.vs  shadow.glsl  skybox.glsl  stencil_outline.frag  stencil_outline.glsl  textured.glsl
Sandbox/engine/include/engine/: AssetManager.h  BaseScene.h  Component.h  DirectionalShadow.h  Entity.h  IRenderable.h  Material.h  Mesh.h  MeshProvider.h  Model.h  RenderState.h  Scene.h
Sandbox/engine/include/engine/assets/: Asset.h  AssetManager.h  AssetsWatcher.h  IAssetsWatcher.h  MaterialAsset.h  MeshAsset.h  ModelAsset.h  ShaderAsset.h  TextureAsset.h
Sandbox/engine/include/engine/components/: Light.h  MeshRenderer.h
Sandbox/engine/src/: AssetManager.cpp  BaseScene.cpp  Component.cpp  DirectionalShadow.cpp  Entity.cpp  Material.cpp  Mesh.cpp  MeshProvider.cpp  Model.cpp  RenderState.cpp  Scene.cpp
Sandbox/engine/src/assets/: Asset.cpp  AssetManager.cpp  AssetsWatcher.cpp  MaterialAsset.cpp  MeshAsset.cpp  ModelAsset.cpp  ShaderAsset.cpp  TextureAsset.cpp
Sandbox/engine/src/components/: Light.cpp  MeshRenderer.cpp
Sandbox/examples/: AdvancedLighting3DExample.cpp  AdvancedLighting3DExample.h  BaseScene.h  Camera3DExample.cpp  Camera3DExample.h  CameraExample.cpp  CameraExample.h  ClearColorExample.cpp  ClearColorExample.h  ColoredQuadExample.cpp  ColoredQuadExample.h  ExamplesMenu.cpp  ExamplesMenu.h  FragmentCircleExample.cpp  FragmentCircleExample.h  FramebufferExample.cpp  FramebufferExample.h  Lighting3DExample.cpp  Lighting3DExample.h  SceneGraphExample.cpp  SceneGraphExample.h  StencilExample.cpp  StencilExample.h  StressTestExample.cpp  StressTestExample.h  TextureExample.cpp  TextureExample.h
cmake/: conan_get_dependencies.cmake
